--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preload" href="fonts/inter-v11-latin-800.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="preload" href="fonts/inter-v11-latin-900.woff2" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./img/icons/logo.svg" type="image/svg">
+    <link rel="icon" href="./img/icons/logo-icon.png" type="image/png">
     <title>Grid</title>
 </head>
 
